Added "Create" functionality on web app and API. Problem with None date_end to be solved...
