# mygymapp/swagger.yml
@@ -39,38 +39,73 @@ paths:
               properties:
                 program_desc:
                   type: string
+                  description: Program name
                 date_start:
                   type: string
+                  description: Start date of program
                 date_end:
                   type: string
+                  description: End date of program
                 program_id:
                   type: string
+                  description: Program db identifier
                 objective:
                   type: string
+                  description: Program functional objectives
 
-  #   post:
-  #     operationId: people.create
-  #     tags:
-  #       - People
-  #     summary: Create a person and add it to the people list
-  #     description: Create a new person in the people list
-  #     parameters:
-  #       - name: person
-  #         in: body
-  #         description: Person to create
-  #         required: True
-  #         schema:
-  #           type: object
-  #           properties:
-  #             fname:
-  #               type: string
-  #               description: First name of person to create
-  #             lname:
-  #               type: string
-  #               description: Last name of person to create
-  #     responses:
-  #       201:
-  #         description: Successfully created person in list
+    post:
+      operationId: api_functions.create_program
+      tags:
+        - Programs
+      summary: Create a program
+      description: Create a new program
+      parameters:
+        - name: program
+          in: body
+          description: Program to create
+          required: True
+          schema:
+            type: object
+            properties:
+              program_desc:
+                  type: string
+                  description: Program name to create
+              date_start:
+                type: string
+                description: Start date of program to create
+              date_end:
+                type: string
+                description: End date of program to create
+              program_id:
+                type: string
+                description: Program db identifier to create
+              objective:
+                type: string
+                description: Program functional objectives to create
+      responses:
+        201:
+          description: Successfully created program
+          schema:
+            properties:
+              program_id:
+                type: string
+                description: ID of program
+              program_desc:
+                  type: string
+                  description: Program name
+              date_start:
+                type: string
+                description: Start date of program
+              date_end:
+                type: string
+                description: End date of program
+              program_id:
+                type: string
+                description: Program db identifier
+              objective:
+                type: string
+                description: Program functional objectives
+              
 
   # /people/{lname}:
   #   get:
